--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Not-Pastebin History
 =====================
+This fork of Pastebin is now called Codebin
+Added non-functional 'Post Title' field. Defaults to 'Untitled'
+Renamed DB and Pastebin classes
+
 v0.0.1-r01 11/10/2017 12:08:31 AM
 Fork of Original Pastebin
 Restructured script. Moved /libs to /public_html
